hdf5-derive/tests/compile-fail/pd-empty-tuple-struct.stderr
error: cannot derive `H5Type` for empty tuple structs
 --> $DIR/pd-empty-tuple-struct.rs:9:8
  |
9 | struct Foo<T>(PhantomData<T>);
  |        ^^^
